<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KAPPS</string>
    <string name="exit_confirm">Confirma sair</string>
    <string name="share_confirm">Compartilhar confirm</string>
    <string name="exit_market_confirm">Deseja sair do Kapps central de software?</string>
    <string name="click_exit">Clique para sair do Kapps central de software</string>
    <string name="press_back_again_to_quit">Pressione novamente para lançar o programa</string>
    <string name="share_market_confirm">Compartilhe?</string>
    <string name="ok">Sim</string>
    <string name="quit">cair fora</string>
    <string name="cancel">Cancela</string>
    <string name="note">Aviso</string>
    <string name="note_colon">Note:</string>
    <string name="watch">Localizar</string>
    <string name="choose_all">Selecione todos</string>
    <string name="ignore_this_update">Não lembrar</string>
    <string name="update">Atualizar</string>
    <string name="back">Volta</string>
    <string name="unknow">Desconhecido</string>
    <string name="none_user">Anômio</string>
    <string name="open">Abrir</string>
    <string name="show_all">Mostra todos</string>
    <string name="retry">Repita</string>
    <string name="favoliten">Adcione favorito</string>
    <string name="share">Apresentar</string>
    <string name="category">Classificar</string>
    <string name="digg">Arranjar</string>
    <string name="boot_error">Falha de ativar mercado</string>
    <string name="empty_task_item">Não existe missão de download</string>
    <string name="more_func">Mais funções</string>
    <string name="market_in_none_network">O Kapps central de software está trabalhando offline</string>
    <string name="use_personal_center_must_login">Você tem que fazer login</string>
    <string name="market_init_config">Está iniciando configuração de mercado</string>
    <string name="load_config_fail_cant_boot_market">Falha de obter dados de iniciacao de mercado, o Kapps central de software não consegue ativar.</string>
    <string name="check_network">Verificar rede</string>
    <string name="network_abnormal">A rede está anormal</string>
    <string name="insert_sdcard_first">Insere cartão SD primeiro</string>
    <string name="sdcard_using_close_first">O cartão SD está funcionando, por favor, desligue o equipamento USB</string>
    <string name="sdcard_state_unusual">O cartão SD está anormal</string>
    <string name="market_version_colon">Versão de Kapps central de software:</string>
    <string name="about_title">Sobre Kapps central software</string>
    <string name="about_content">		Caso o senhor achou qualquer erro ou tiver melhor suguestões sobre nosso software, por favo, levante! O seu retorno é nossa força de avançar!</string>
    <string name="valid_email_format">Formato do e-mail valido</string>
    <string name="register_account">Ainda não tem conta? \ cria uma conta agora! É fácil.</string>
    <string name="login_market">Já possui conta? \ use o "Kapps central de software" que você deseja conecta com este celular para fazer login. Usuario de fórum pode login diretamente com conta de fórum, nem precisa catastrar novamente.</string>
    <string name="account">Conta</string>
    <string name="register">Catastrar</string>
    <string name="login">Login</string>
    <string name="next">Proximo</string>
    <string name="pwd_note_colon">Senha:</string>
    <string name="user_registe_name_note_colon">Usuario: (entre 2-16 dígitos)</string>
    <string name="affirm_pwd_note_colon">Confirmar senha:</string>
    <string name="wait_for_progress">Está tratando pedido, por favor, aguarde...</string>
    <string name="login_userid_cant_none">O ID de usuário não pode ser vazio</string>
    <string name="password_not_confirm">As senhas digitadas de duaz vezes são diferentes</string>
    <string name="email_must_satisfactory">Formato do e-mail valido, entre 3-25 digitos.</string>
    <string name="pw_must_satisfactory">A senha entre 7-12 digitos</string>
    <string name="login_unusual">Falha de login</string>
    <string name="registe_unusual">Falha de catastrar</string>
    <string name="progress_in_registe">Está tratando pedido de catastrar</string>
    <string name="progress_in_login">Está tratando pedido de login</string>
    <string name="login_success_entry_home">Login com sucesso, está entrando pagna principal</string>
    <string name="registe_success_then_login">Catastre com sucesso, está fazendo login</string>
    <string name="login_request">Está pedindo login</string>
    <string name="cant_auto_login">Não pode login automaticamente</string>
    <string name="login_success">Login com sucesso</string>
    <string name="login_fail">Falha de login</string>
    <string name="weloome_login_market">Bem vindo para Kapps central de software</string>
    <string name="password_colon">Senha:</string>
    <string name="accept_declare_note">Concordo os provisões</string>
    <string name="user_registe">Registração de novo usuario</string>
    <string name="pwd_registe_note_colon">Senha: (7-12 digitos)</string>
    <string name="user_name">Nome de usuario</string>
    <string name="app_share">Software públicos</string>
    <string name="app_other_ver">Outras versões</string>
    <string name="user_center">OS usuários do Centro</string>
    <string name="day_hotp">Melhores do dia</string>
    <string name="day_hot">Os necessários</string>
    <string name="week_hot">Hot da semana</string>
    <string name="month_day">Hot do mês</string>
    <string name="year_day">Hot do ano</string>
    <string name="user_rating">Nivel dado do usuario</string>
    <string name="free_hot">Hot gratuito</string>
    <string name="pay_hot">Hot pagado</string>
    <string name="newest_upload">Novidades</string>
    <string name="pick_app">Aplicativo recomentado</string>
    <string name="download_task">Nissão baixado</string>
    <string name="installed_software">Software instalado</string>
    <string name="local_apk">APK do local</string>
    <string name="my_favoliten">Meu favorito</string>
    <string name="my_purchase">Minha compra</string>
    <string name="personal_info">Perfil</string>
    <string name="software_instroduce">Detalhas</string>
    <string name="watch_comment">Comentario</string>
    <string name="other_comment">Outros comentarios</string>
    <string name="about_author">Autor</string>
    <string name="home">Pagina principal</string>
    <string name="categroy">Tipo</string>
    <string name="manage">Administração</string>
    <string name="personal_center">Central pessoal</string>
    <string name="cat_application">APPS</string>
    <string name="cat_game">JOGOS</string>
    <string name="cat_pick">Ofereciso</string>
    <string name="contact_info">Contato</string>
    <string name="homepage_colon">Pagina principal:</string>
    <string name="email_colon">E-mail:</string>
    <string name="other_produce">Outras obras</string>
    <string name="load_other_produce">Clique, procure outras obras do autor</string>
    <string name="hi_market_app_install">Instalação de software de central de software Kapps</string>
    <string name="install_success">Instalação com sucesso</string>
    <string name="install_failure">Instalação falhou</string>
    <string name="uninstall_success">Remoção com sucesso</string>
    <string name="uninstall_failure">Remoção falhou</string>
    <string name="cant_find_app_detail">Não consegue informação detalhada</string>
    <string name="free">Baixar Grátis</string>
    <string name="price_colon">Baixado:</string>
    <string name="downloaded">Baixado</string>
    <string name="downloading">Está baixando</string>
    <string name="installing">Está instalando</string>
    <string name="updatable">A atualizar</string>
    <string name="installed">Instalado</string>
    <string name="purchased">Comptrado</string>
    <string name="uninstall">Desinstalar</string>
    <string name="install">Instalar</string>
    <string name="download">Baixar</string>
    <string name="stop">Parar</string>
    <string name="not_installed">Não instalado</string>
    <string name="software_error_cant_boot">Existe um erro no software, não consegue ativar esse software</string>
    <string name="please_fill_objection">Por favor, preencha a causa de opor</string>
    <string name="submit_same_report">O seu mesmo aviso já tinha passado uma vez</string>
    <string name="your_report">Seu mensagem</string>
    <string name="wait_for_reporting">A denúncia está enviando, por favor, aguarde</string>
    <string name="wait_for_commenting">Comentário está enviando, por favor, aguarde</string>
    <string name="commit_comment_success">O comentário foi enviado com sucesso</string>
    <string name="commit_comment_fail">O comentário não foi enviado</string>
    <string name="commit_badness_success">O aviso foi enviado com sucesso</string>
    <string name="commit_badness_fail">O aviso não foi enviado</string>
    <string name="my_comment">Meu comentário</string>
    <string name="need_score_software">é necessário tirar uma nota para software</string>
    <string name="none_other_app">Não existe obra relarionada</string>
    <string name="none_other_version_app">Não existe outra versão relacionada</string>
    <string name="load_other_version_app_fail">Recarrega outra versão relacionada falhou, por favor, tente novamente</string>
    <string name="download_count_colon">Vez baixada:</string>
    <string name="comment_count_colon">Vez comentada:</string>
    <string name="wait_for_installing">Está instalando, por favor, aguarde...</string>
    <string name="new_apk_file">Novo documento de APK</string>
    <string name="choose_apk_first">Escolha o APK que vai instalar</string>
    <string name="manual_load_screenshot_note">Esse software possui uma imagem, clica para carregar</string>
    <string name="none_screenshot_note">Este software não  possui imagem</string>
    <string name="install_success_click_open">Instalação com sucesso, clica para abrir</string>
    <string name="software_need_permission_tip">Esse aplicativo precisa autolização seguinte:</string>
    <string name="load_permission_fail">Carrega autolização falhou</string>
    <string name="show_hided_permission">Mostra lista de compentência oculta</string>
    <string name="my_comment_title">Meus comentários</string>
    <string name="comment_colon">Comentarios:</string>
    <string name="score_colon">Nota:</string>
    <string name="size_colon">Tamanho:</string>
    <string name="version_colon">Versão:</string>
    <string name="state_colon">Status:</string>
    <string name="app_auth_time">Tempo de upload</string>
    <string name="char_introduce_title">Explicação textual</string>
    <string name="screenshot_title">Imagem de software</string>
    <string name="other_version_note">Clica para ver outras versões</string>
    <string name="badness_title">Publica o problema</string>
    <string name="market_ill_text">o motivo de você acha que o conteudo ou aplicativo não se serve é:</string>
    <string name="eroticism_content">conteudo sexual</string>
    <string name="violence_pic">imagem violencia</string>
    <string name="rebarbative_content_or_invasive">conteudo chato ou ofentivo</string>
    <string name="deleterious">ruim para celular ou para dados</string>
    <string name="other_oppose">outros motivos</string>
    <string name="terms">concordo provisão de serviço de "Kapps central de software"</string>
    <string name="marketupdate">atualizacao de mercado</string>
    <string name="softupdate">atualizacao de software</string>
    <string name="login_registe">logoff</string>
    <string name="feed_back">retorno</string>
    <string name="exit_market">sair do sistema</string>
    <string name="setup">configuração</string>
    <string name="about">sobre</string>
    <string name="topic">tópico</string>
</resources>