<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/content_bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/user_registe"
                android:textColor="#ff393939"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/userIdField"
				style="@style/Common.EditText"
                android:layout_marginTop="10dip"
                android:hint="@string/valid_email_format"
                android:inputType="textEmailAddress|text"/>

            <EditText
                android:id="@+id/pwdField"
                style="@style/Common.EditText"
                android:layout_marginTop="10dip"
                android:hint="@string/pwd_registe_note_colon"
                android:password="true"/>

            <EditText
                android:id="@+id/affirmPwdField"
				style="@style/Common.EditText"
				android:layout_marginTop="10dip"
                android:hint="@string/affirm_pwd_note_colon"
                android:password="true" />

            <TextView
                android:id="@+id/registResultLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="5dip"
                android:textColor="#f9535f" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center" >
	        <CheckBox
	            android:id="@+id/registDeclareBox"
	            android:button="@drawable/check_common_btn"
	            android:layout_width="wrap_content"
	            android:layout_height="50dip"
	            android:layout_gravity="center_horizontal"/>
	        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
	            android:text="@string/terms" 
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center" >

            <Button
                android:id="@+id/preButton"
                style="@style/Common.Button"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dip"
                android:focusable="false"
                android:text="@string/back" />

            <Button
                android:id="@+id/nextButton"
                style="@style/Common.Button"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>