<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/content_bg" >

    <LinearLayout
        android:id="@+id/loginMainView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/weloome_login_market"
                android:textColor="#ff393939"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/userIdField"
                style="@style/Common.EditText"
                android:layout_marginTop="15dip"
                android:hint="@string/user_registe_name_note_colon"/>

            <EditText
                android:id="@+id/pwdField"
                style="@style/Common.EditText"
                android:layout_marginTop="10dip"
                android:hint="@string/pwd_registe_note_colon"
                android:inputType="textWebPassword"/>

            <TextView
                android:id="@+id/loginResultLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="15dip"
                android:textColor="#f9535f" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:gravity="center" >

            <Button
                android:id="@+id/registerViewButton"
                style="@style/Common.Button"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dip"
                android:focusable="false"
                android:text="@string/register" />

            <Button
                android:id="@+id/loginViewButton"
                style="@style/Common.Button"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/login" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>